Fixing scroll bar visibility for OSX/iOS Safari and Chrome.

--- a/webapp/workplaceThemes/VAADIN/themes/opencms/_opencms.scss
+++ b/webapp/workplaceThemes/VAADIN/themes/opencms/_opencms.scss
@@ -5,6 +5,28 @@
 	@return $start 2%, $end 98%;
 }
 
+@mixin o-visible-scrollbars {
+	/* Makes OSX and iOS scrollbars always visible */	
+	::-webkit-scrollbar {
+		-webkit-appearance: none;
+	}
+	::-webkit-scrollbar:vertical {
+		width: 11px;
+	}
+	::-webkit-scrollbar:horizontal {
+    	height: 11px;
+	}
+	::-webkit-scrollbar-thumb {
+    	border-radius: 8px;
+    	border: 2px solid white; /* should match background, can't be transparent */
+    	background-color: rgba(0, 0, 0, .5);
+	}
+	::-webkit-scrollbar-track { 
+    	background-color: #fff; 
+    	border-radius: 8px; 
+	}
+}
+
 @mixin o-workplace-form-wide {
 	.o-formlayout-workplace-main { 
 		.v-formlayout-row .v-formlayout-captioncell {
@@ -86,6 +108,11 @@
 
 	.v-formlayout .v-caption{
 		font-size: $v-font-size;
+	}
+	
+	/* Making scroll bars always visible on combo box selects */
+	.v-filterselect-suggestpopup{
+	 	 @include o-visible-scrollbars;
 	}
   
 	/* Fix for disabled menu items - especially for non-collapsible table columns. */
